--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap");
+
+@layer base {
+	html {
+		@apply bg-black;
+	}
+
+	p,
+	span,
+	h1,
+	h2,
+	h3,
+	h4 {
+		@apply text-white font-serif font-normal;
+	}
+
+	h1 {
+		@apply text-4xl;
+	}
+
+	h2 {
+		@apply text-5xl;
+	}
+}
