Working global state Cart

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,6 +33,10 @@
 	span {
 		@apply text-white font-sansSerif font-normal leading-7;
 	}
+
+	button {
+		@apply bg-gold px-8 py-2 uppercase;
+	}
 }
 
 .perspective-container {
