--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,7 +17,8 @@
 	}
 
 	h1 {
-		@apply text-4xl;
+		@apply text-6xl;
+		@apply font-thin;
 	}
 
 	h2 {
@@ -37,10 +38,10 @@
 	.button {
 		@apply bg-gold px-8 py-2 uppercase;
 	}
+}
 
-	body {
-		scrollbar-gutter: stable both-edges;
-	}
+body {
+	scrollbar-gutter: stable both-edges;
 }
 
 .perspective-container {
@@ -50,4 +51,8 @@
 .perspective-text {
 	transform: rotateX(0deg) rotateY(21deg);
 	transform-style: preserve-3d;
+}
+
+.gradient-bg-cover {
+	background: linear-gradient(45deg, #312c28 0%, #615851 100%);
 }
