--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,6 +62,10 @@ body {
 	background: linear-gradient(45deg, #312c28 0%, #615851 100%);
 }
 
-.backdrop-filter {
-	backdrop-filter: blur(5px);
+.backdrop-filter-glass {
+	backdrop-filter: blur(5px) contrast(0.8); 
+}
+
+.the-articulus-ring {
+	
 }
