--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,10 +39,6 @@
 	.button {
 		@apply bg-gold px-8 py-2 uppercase;
 	}
-
-	.the-articulus-ring {
-
-	}
 }
 
 body {
@@ -66,6 +62,61 @@ body {
 	backdrop-filter: blur(5px) contrast(0.8); 
 }
 
-.the-articulus-ring {
-	
+.the-articulus-ring .product-details-container{
+ @apply text-center col-start-2 col-end-12 md:row-span-full md:col-start-2 md:col-end-7;
 }
+
+.the-articulus-ring .models-gallery-outer{
+ @apply col-start-2 col-end-12 md:row-span-full md:col-start-7 md:col-end-13;
+}
+
+.the-articulus-ring .models-gallery-inner{
+	@apply grid grid-cols-12 gap-4;
+}
+
+.the-articulus-ring .model-image:nth-of-type(1){
+	@apply col-start-2 col-end-12 md:row-span-full md:col-start-1 md:col-end-5;
+}
+
+.the-articulus-ring .model-image:nth-of-type(2){
+	@apply hidden md:block md:row-span-full md:col-start-5 md:col-end-13;
+} 
+
+
+
+.the-pellis-ring .product-details-container{
+	@apply text-center col-start-2 col-end-12 md:row-span-full md:col-start-7 md:col-end-12;
+}
+ 
+.the-pellis-ring .models-gallery-outer{
+	@apply col-start-2 col-end-12 md:row-span-full md:col-start-2 md:col-end-7;
+}
+ 
+.the-pellis-ring .models-gallery-inner{
+	@apply grid grid-cols-12 gap-4;
+}
+ 
+.the-pellis-ring .model-image:nth-of-type(1){
+	@apply col-start-2 col-end-12 md:row-span-full md:col-start-1 md:col-end-12;
+}
+
+
+.the-manibus-ring .product-details-container{
+	@apply text-center col-start-2 col-end-12 md:row-span-full md:col-start-2 md:col-end-7;
+ }
+ 
+ .the-manibus-ring .models-gallery-outer{
+	@apply col-start-2 col-end-12 md:row-span-full md:col-start-7 md:col-end-13;
+ }
+ 
+ .the-manibus-ring .models-gallery-inner{
+	 @apply grid grid-cols-12 gap-4;
+ }
+ 
+ .the-manibus-ring .model-image:nth-of-type(1){
+	 @apply col-start-2 col-end-12 md:row-span-full md:col-start-3 md:col-end-7 z-10 mt-8;
+ }
+ 
+ .the-manibus-ring .model-image:nth-of-type(2){
+	 @apply hidden md:block md:row-span-full md:col-start-5 md:col-end-13;
+ } 
